--- a/supergame.html
+++ b/supergame.html
@@ -2,244 +2,177 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title></title>
-  <link href="style.css" rel="stylesheet" />
+	<meta charset="utf-8">
+	<title></title>
+	<link href="style.css" rel="stylesheet" />
+	 <script src="sprites.js"></script> 
 </head>
 <body>
+	use W A S D Q E or 
+	<a onclick="updateActiveShopper('up')">up</a></br>
+	<a onclick="updateActiveShopper('down')">down</a></br>
+	<a onclick="updateActiveShopper('left')">left</a></br>
+	<a onclick="updateActiveShopper('right')">right</a></br>
+	<a onclick="updateActiveShopper('clockwise')">clockwise turn</a></br>
+	<a onclick="updateActiveShopper('anti-clockwise')">anti-clockwise turn</a></br>
+	<a onclick="activeShoperType = 'withCart'; updateActiveShopper();">Cart</a></br>
+	<a onclick="activeShoperType = 'withBasketSide'; updateActiveShopper();">withBasketSide</a></br>
+	<a onclick="activeShoperType = 'withBasketFront'; updateActiveShopper();">withBasketFront</a></br>
+<div class="shop"></div>
+</br>
 :withcart
 <div class="shoppers shoppers-withcart"></div>
 :withBasketFront
 <div class="shoppers shoppers-withBasketFront"></div>
 :withBasketSide
 <div class="shoppers shoppers-withBasketSide"></div>
-
-
-
-
-  <a onclick="updateActive('up')">up</a></br>
-  <a onclick="updateActive('down')">down</a></br>
-  <a onclick="updateActive('left')">left</a></br>
-  <a onclick="updateActive('right')">right</a></br>
-  <a onclick="updateActive('clockwise')">clockwise turn</a></br>
-  <a onclick="updateActive('anti-clockwise')">anti-clockwise turn</a></br>
-
-<div class="shop"></div>
-  <script>
+	<script>
 
 let activeShoperShopingList = [{name: '6 eggs', categoryId:1}, {name: '1L milk',categoryId:2}];
 let activeShoperX = 0;
 let activeShoperY = 0;
+let activeShoperType = 'withCart';
 let activeShoperAngle = 0;
-  	const sprites = {
-  		withCart: {
-  			vertical: {
-  				x: 8,
-  				y: 16,
-  				outline: [],
-  				colors:[[0,0,1,1,1,1,0,0],
-[0,1,1,1,1,1,1,0],
-[0,1,1,1,1,1,1,0],
-[0,1,1,1,1,1,1,0],
-[0,1,1,1,1,1,1,0],
-[0,1,1,1,1,1,1,0],
-[0,1,1,1,1,1,1,0],
-[0,1,1,1,1,1,1,0],
-[0,1,1,1,1,1,1,0],
-[2,2,0,0,0,0,3,3],
-[2,2,1,1,1,1,3,3],
-[7,6,6,6,6,6,6,0],
-[7,7,4,4,4,6,6,0],
-[7,7,4,4,4,6,6,0],
-[0,0,4,4,4,0,0,0],
-[0,0,0,5,0,0,0,0]],
-  			},
-  			diagonal: {
-  				x: 14,
-  				y: 14,
-  				outline:[],
-  				colors:[[0,0,0,1,0,0,0,0,0,0,0,0,0,0,0],
-[0,0,1,1,1,1,0,0,0,0,0,0,0,0,0],
-[0,1,1,1,1,1,1,0,0,0,0,0,0,0,0],
-[1,1,1,1,1,1,1,1,0,0,0,0,0,0,0],
-[0,1,1,1,1,1,1,1,1,0,0,0,0,0,0],
-[0,1,1,1,1,1,1,1,1,1,0,0,0,0,0],
-[0,0,1,1,1,1,1,1,1,3,3,0,0,0,0],
-[0,0,0,1,1,1,1,1,1,3,3,6,0,0,0],
-[0,0,0,0,1,1,1,1,0,1,6,6,6,0,0],
-[0,0,0,0,0,1,2,2,1,6,6,4,6,6,0],
-[0,0,0,0,0,0,2,2,6,6,4,4,4,0,0],
-[0,0,0,0,0,0,0,7,7,4,4,4,4,0,0],
-[0,0,0,0,0,0,0,7,7,7,4,4,5,0,0],
-[0,0,0,0,0,0,0,0,7,0,0,0,0,0,0],
-[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],],
-  			}
-  		},
-
-  		withBasketSide: {
-  			vertical: {
-  				x: 14,
-  				y: 7,
-  				outline:[],
-  				colors:[
-[0,0,0,0,0,0,0,0,0,1,1,1],
-[0,0,0,0,0,0,0,0,1,1,1,1],
-[2,7,6,6,6,6,6,6,3,1,1,1],
-[2,7,7,4,4,4,6,6,3,1,1,1],
-[0,7,7,4,4,4,6,6,0,1,1,1],
-[0,0,0,4,4,4,0,0,0,0,0,0],
-[0,0,0,0,5,0,0,0,0,0,0,0],
-],
-  			},
-  			diagonal: {
-  				x: 12,
-  				y: 10,
-  				outline:[],
-  				colors:[
-[0,0,0,0,0,0,0,1,1,0,0],
-[0,0,0,0,0,0,1,1,1,1,0],
-[0,0,0,0,0,0,1,1,1,1,1],
-[0,0,0,0,0,6,3,3,1,1,0],
-[0,0,0,0,6,6,6,3,1,0,0],
-[0,0,0,6,6,4,6,6,0,0,0],
-[0,0,6,6,4,4,4,0,0,0,0],
-[0,7,7,4,4,4,4,0,0,0,0],
-[2,7,7,7,4,4,5,0,0,0,0],
-[2,2,7,0,0,0,0,0,0,0,0]
-],
-  			}
-  		},
-  		withBasketFront: {
-  			vertical: {
-  				x: 8,
-  				y: 10,
-  				outline:[],
-  				colors:[
-[0,0,1,1,1,1,0,0],
-[0,1,1,1,1,1,1,0],
-[2,2,1,1,1,1,1,0],
-[2,2,1,1,1,1,0,0],
-[2,0,0,0,0,0,0,0],
-[7,6,6,6,6,6,6,3],
-[7,7,4,4,4,6,6,3],
-[7,7,4,4,4,6,6,0],
-[0,0,4,4,4,0,0,0],
-[0,0,0,5,0,0,0,0]],
-  			},
-  			diagonal: {
-  				x: 9,
-  				y: 10,
-  				outline:[],
-  				colors:[[0,0,0,0,3,3,0,0,0],
-[0,0,0,1,3,3,0,0,0],
-[0,1,1,1,1,3,3,0,0],
-[0,1,1,1,1,0,3,3,0],
-[1,1,1,1,0,6,6,6,3],
-[0,1,1,0,6,6,4,6,6],
-[0,0,0,6,6,4,4,4,0],
-[0,0,7,7,4,4,4,4,0],
-[0,2,7,7,7,4,4,5,0],
-[0,2,2,7,0,0,0,0,0]],
-  			}
-  		}
+	
 
 
 
-  	};
+
+// .shop{
+//   width: 1700px;
+//   height: 1000px;
+// }
+
+
+const outsideShop = () => {
+
+
+		if(activeShoperAngle % 2 == 0){
+		shopper = sprites[activeShoperType].diagonal;
+	}else{
+		shopper = sprites[activeShoperType].vertical;
+	}
+
+
+console.log(activeShoperX, activeShoperY, shopper);
+	if(activeShoperX + (shopper.x * 20) > 1700){
+		console.log(123);
+	}
+
+	if(activeShoperY + (shopper.y * 10) > 1000){
+		console.log(1234);
+	}
+		
+
+}
+
+
+
+
+
+
+
+
 const getPixelColor = (int) => {
-	if(int=== 0){return '000000000';}
-	if(int=== 1){return '#999';}
-	if(int=== 2){return '#fce5cd';}
-	if(int=== 3){return '#f4cccc';}
-	if(int=== 4){return '#f1c232';}
-	if(int=== 5){return '#f1c232';}
-	if(int=== 6){return '#93c47d';}
-	if(int=== 7){return '#6aa84f';}
+	if(int=== 0){return '000000000';} //the void
+	if(int=== 1){return '#999';} // basket
+	if(int=== 2){return '#fce5cd';} // light skin
+	if(int=== 3){return '#f4cccc';} // dark skin
+	if(int=== 4){return '#f1c232';} // hair
+	if(int=== 5){return '#f1c232';} // the hairbun
+	if(int=== 6){return '#93c47d';} // light clothing
+	if(int=== 7){return '#6aa84f';} // dark clothing
 };
 
 
-
-const renderShopper = (shopper, angle = 0, active = false) => {
-if(angle % 2 == 0){
-	shopper = shopper.diagonal.colors;
-}else{
-	shopper = shopper.vertical.colors;
-}
-if(angle === 2 ){
-	shopper = shopper[0].map((val, index) => shopper.map(row => row[index]).reverse());
-}
-if(angle === 3){
-	shopper = shopper[0].map((val, index) => shopper.map(row => row[index]).reverse());
-}
-if(angle === 4){
-	shopper = shopper[0].map((val, index) => shopper.map(row => row[index]).reverse());
-	shopper = shopper[0].map((val, index) => shopper.map(row => row[index]).reverse());
-}
-if(angle === 5){
-	shopper = shopper[0].map((val, index) => shopper.map(row => row[index]).reverse());
-	shopper = shopper[0].map((val, index) => shopper.map(row => row[index]).reverse());
-}
-if(angle === 6){
-	shopper = shopper[0].map((val, index) => shopper.map(row => row[row.length-1-index]));
-}
-if(angle === 7){
-	shopper = shopper[0].map((val, index) => shopper.map(row => row[row.length-1-index]));
-}
+const shopperCache = [];
+const renderShopper = (shopperType, angle = 0, active = false) => {
+	
 
 
+
+
+outsideShop();
+
+
+
+
+
+
+
+
+
+
+
+	if(shopperCache[shopperType] === undefined){
+		shopperCache[shopperType] = [];
+	}
+	if(shopperCache[shopperType][angle] === undefined){
+		shopperCache[shopperType][angle] = [];
+	}
+	if(shopperCache[shopperType][angle][active] !== undefined){
+		return shopperCache[shopperType][angle][active];
+	}
+	shopper = sprites[shopperType];
+
+	if(angle % 2 == 0){
+		shopper = shopper.diagonal.colors;
+	}else{
+		shopper = shopper.vertical.colors;
+	}
+
+	// Rotates the array by x degrees
+	if(angle === 2 ){
+		shopper = shopper[0].map((val, index) => shopper.map(row => row[index]).reverse());
+	}
+	if(angle === 3){
+		shopper = shopper[0].map((val, index) => shopper.map(row => row[index]).reverse());
+	}
+	if(angle === 4){
+		shopper = shopper[0].map((val, index) => shopper.map(row => row[index]).reverse());
+		shopper = shopper[0].map((val, index) => shopper.map(row => row[index]).reverse());
+	}
+	if(angle === 5){
+		shopper = shopper[0].map((val, index) => shopper.map(row => row[index]).reverse());
+		shopper = shopper[0].map((val, index) => shopper.map(row => row[index]).reverse());
+	}
+	if(angle === 6){
+		shopper = shopper[0].map((val, index) => shopper.map(row => row[row.length-1-index]));
+	}
+	if(angle === 7){
+		shopper = shopper[0].map((val, index) => shopper.map(row => row[row.length-1-index]));
+	}
 
 
 	let html = '<div class="shopper">';
 	if(active){
-		html = '<div class="shopper active">';
+		html = '<div class="active-shopper">';
 	}
-  	for(var row of  shopper){
-  		html += '<span>';
-  		for(var cell of  row ){
-	  		html += '<p style="background-color:'+getPixelColor(cell)+'">' ;
-	  		html += '</p>';
-	  	}
-  		html += '</span>';
-  	}
-  	return html + '</div>';
+	for(var row of  shopper){
+		html += '<div class="pixel-row">';
+		for(var cell of  row ){
+			html += '<div class="pixel" style="background-color:'+getPixelColor(cell)+'">' ;
+			html += '</div>';
+		}
+		html += '</div>';
+	}
+	const result =  html + '</div>';
+
+	shopperCache[shopperType][angle][active] = result;
+	return result;
 
 };
 
+const examplesWithcart = document.querySelector('.shoppers-withcart');
+const examplesWithBasketSide = document.querySelector('.shoppers-withBasketSide');
+const examplesWithBasketFront = document.querySelector('.shoppers-withBasketFront');
+for (var i = 0; i < 8; i++) {
+	examplesWithcart.innerHTML += renderShopper('withCart',i);
+	examplesWithBasketSide.innerHTML += renderShopper('withBasketSide',i);
+	examplesWithBasketFront.innerHTML += renderShopper('withBasketFront',i);
+}
 
-
-document.querySelector('.shoppers-withcart').innerHTML += renderShopper(sprites.withCart,0);
-document.querySelector('.shoppers-withcart').innerHTML += renderShopper(sprites.withCart,1);
-document.querySelector('.shoppers-withcart').innerHTML += renderShopper(sprites.withCart,2);
-document.querySelector('.shoppers-withcart').innerHTML += renderShopper(sprites.withCart,3);
-document.querySelector('.shoppers-withcart').innerHTML += renderShopper(sprites.withCart,4);
-document.querySelector('.shoppers-withcart').innerHTML += renderShopper(sprites.withCart,5);
-document.querySelector('.shoppers-withcart').innerHTML += renderShopper(sprites.withCart,6);
-document.querySelector('.shoppers-withcart').innerHTML += renderShopper(sprites.withCart,7);
-
-
-
-document.querySelector('.shoppers-withBasketSide').innerHTML += renderShopper(sprites.withBasketSide);
-document.querySelector('.shoppers-withBasketSide').innerHTML += renderShopper(sprites.withBasketSide,1);
-document.querySelector('.shoppers-withBasketSide').innerHTML += renderShopper(sprites.withBasketSide,2);
-document.querySelector('.shoppers-withBasketSide').innerHTML += renderShopper(sprites.withBasketSide,3);
-document.querySelector('.shoppers-withBasketSide').innerHTML += renderShopper(sprites.withBasketSide,4);
-document.querySelector('.shoppers-withBasketSide').innerHTML += renderShopper(sprites.withBasketSide,5);
-document.querySelector('.shoppers-withBasketSide').innerHTML += renderShopper(sprites.withBasketSide,6);
-document.querySelector('.shoppers-withBasketSide').innerHTML += renderShopper(sprites.withBasketSide,7);
-
-
-document.querySelector('.shoppers-withBasketFront').innerHTML += renderShopper(sprites.withBasketFront);
-document.querySelector('.shoppers-withBasketFront').innerHTML += renderShopper(sprites.withBasketFront,1);
-document.querySelector('.shoppers-withBasketFront').innerHTML += renderShopper(sprites.withBasketFront,2);
-document.querySelector('.shoppers-withBasketFront').innerHTML += renderShopper(sprites.withBasketFront,3);
-document.querySelector('.shoppers-withBasketFront').innerHTML += renderShopper(sprites.withBasketFront,4);
-document.querySelector('.shoppers-withBasketFront').innerHTML += renderShopper(sprites.withBasketFront,5);
-document.querySelector('.shoppers-withBasketFront').innerHTML += renderShopper(sprites.withBasketFront,6);
-document.querySelector('.shoppers-withBasketFront').innerHTML += renderShopper(sprites.withBasketFront,7);
-
-
-
-const updateActive = (move) => {
+const updateActiveShopper = (move = '') => {
 
 
 	if(move === 'up'){
@@ -308,20 +241,16 @@ const updateActive = (move) => {
 
 
 
-document.querySelector('.shop').innerHTML = renderShopper(sprites.withCart, activeShoperAngle, true);
+document.querySelector('.shop').innerHTML = renderShopper(activeShoperType, activeShoperAngle, true);
 
 document.querySelector('.active-style').innerHTML = `<style>
-  	.active{
-  		  top: ${activeShoperY}px;
-  		  left: ${activeShoperX}px;
-  		  position: relative;
-  	}</style>`;
+		.active-shopper{
+				top: ${activeShoperY-3}px;
+				left: ${activeShoperX}px;
+				position: relative;
+		}</style>`;
 
 }
-
-
-
-
 
 
 
@@ -329,88 +258,66 @@ document.querySelector('.active-style').innerHTML = `<style>
 var keyPressed = {};
 document.querySelector('body').addEventListener('keydown', function(e) {
 
-   keyPressed[e.key + e.location] = true;
-
-console.log(keyPressed);
-
-
-
-
+	 keyPressed[e.key + e.location] = true;
 
  let offset = 0;
 offset = activeShoperAngle %8;
-
 frameOfReferance = [
-  'left-up',
-  'up',
-  'up-right',
-  'right',
-  'right-down',
-  'down',
-  'down-left',
-  'left',
-  'left-up',
-  'up',
-  'up-right',
-  'right',
-  'right-down',
-  'down',
-  'down-left',
-  'left',
-  'left-up',
-  'up',
-  'up-right',
-  'right',
-  'right-down',
-  'down',
-  'down-left',
-  'left'];
+	'left-up',
+	'up',
+	'up-right',
+	'right',
+	'right-down',
+	'down',
+	'down-left',
+	'left',
+	'left-up',
+	'up',
+	'up-right',
+	'right',
+	'right-down',
+	'down',
+	'down-left',
+	'left',
+	'left-up',
+	'up',
+	'up-right',
+	'right',
+	'right-down',
+	'down',
+	'down-left',
+	'left'];
 
 
-  
 
-  if (keyPressed.w0 == true && keyPressed.a0 == true) {
-    event.preventDefault();
-    updateActive(frameOfReferance[offset+7]);
-  }else if (keyPressed.d0 == true && keyPressed.w0 == true) {
-    event.preventDefault();
-    updateActive(frameOfReferance[offset+1]);
-  }else if (keyPressed.s0 == true && keyPressed.d0 == true) {
-    event.preventDefault();
-    updateActive(frameOfReferance[offset+3]);
-  }else if (keyPressed.s0 == true && keyPressed.a0 == true) {
-    event.preventDefault();
-    updateActive(frameOfReferance[offset+5]);
-  }else if (keyPressed.w0 == true) {
-    event.preventDefault();
-    updateActive(frameOfReferance[offset]);
-  }else 
-  if (keyPressed.d0 == true) {
-    event.preventDefault();
-    updateActive(frameOfReferance[offset+2]);
-  }else if (keyPressed.s0 == true) {
-    event.preventDefault();
-    updateActive(frameOfReferance[offset+4]);
-  }else 
-  if (keyPressed.a0 == true) {
-    event.preventDefault();
-    updateActive(frameOfReferance[offset+6]);
-  }else 
-  if (keyPressed.q0 == true) {
-    event.preventDefault();
-    updateActive('anti-clockwise');
-  }else 
-  if (keyPressed.e0 == true) {
-    event.preventDefault();
-    updateActive('clockwise');
-  }
+	if ((keyPressed.w0 == true && keyPressed.a0 == true) || (keyPressed.a0 == true && keyPressed.w0 == true)) {
+		updateActiveShopper(frameOfReferance[offset+7]);
+	}else if ((keyPressed.d0 == true && keyPressed.w0 == true) || (keyPressed.w0 == true && keyPressed.d0 == true)) {
+		updateActiveShopper(frameOfReferance[offset+1]);
+	}else if ((keyPressed.s0 == true && keyPressed.d0 == true)||(keyPressed.d0 == true && keyPressed.s0 == true)) {
+		updateActiveShopper(frameOfReferance[offset+3]);
+	}else if ((keyPressed.s0 == true && keyPressed.a0 == true) || (keyPressed.a0 == true && keyPressed.s0 == true)) {
+		updateActiveShopper(frameOfReferance[offset+5]);
+	}else if (keyPressed.w0 == true) {
+		updateActiveShopper(frameOfReferance[offset]);
+	}else if (keyPressed.d0 == true) {
+		updateActiveShopper(frameOfReferance[offset+2]);
+	}else if (keyPressed.s0 == true) {
+		updateActiveShopper(frameOfReferance[offset+4]);
+	}else if (keyPressed.a0 == true) {
+		updateActiveShopper(frameOfReferance[offset+6]);
+	}else if (keyPressed.q0 == true) {
+		updateActiveShopper('anti-clockwise');
+	}else if (keyPressed.e0 == true) {
+		updateActiveShopper('clockwise');
+	}
 
 }, false);
 
 document.addEventListener('keyup', function(e) {
-   keyPressed[e.key + e.location] = false;
+	 keyPressed[e.key + e.location] = false;
 
-   keyPressed = {};
+	 keyPressed = {};
 }, false);
 
 
@@ -421,31 +328,18 @@ document.addEventListener('keyup', function(e) {
 const updateGameState = () => {
 
 
-document.querySelector('.shop').innerHTML = renderShopper(sprites.withCart, activeShoperAngle, true);
+document.querySelector('.shop').innerHTML = renderShopper(activeShoperType, activeShoperAngle, true);
 
 
 };
 updateGameState();
-  </script>
+	</script>
 
-  <div class="active-style"></div>
-  <style>
-  	
-  	.shop{
-  		background-color: #ccd0d2;
-  		width: 1700px;
-  		height: 1000px;
-  		display: inline-block;
-  	}
-  	.shopper{display:inline-block; margin-left: 20px;}
-
-  	span{height:10px;display:block;margin:0; padding:0;}
-  	p{
-  		margin:0;
-  		padding:0;
-  		display:inline-block;
-  		width:10px;
-  		height:10px;}
-  </style>
+	<div class="active-style"><style>
+		.active-shopper{
+				top: -3px;
+				left: 0px;
+				position: relative;
+		}</style></div>
 </body>
 </html>
